# WeatherTracker

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml
weather-tracker/: manage.py
weather-tracker/base_config/: config.py  settings.py  urls.py  views.py
weather-tracker/weather_app/: apps.py  helpers.py  urls.py  views.py
weather-tracker/weather_app/templates/base_config/: error.html  home.html
weather-tracker/weather_app/templates/weather_app/: city_weather.html  index.html
